--- a/_posts/2016-12-19-homework.md
+++ b/_posts/2016-12-19-homework.md
@@ -5,18 +5,24 @@ cover: homework.jpg
 categories: posts
 ---
 
-All assignments are to be submitted electronically through email to `xx [at] caltech [dot] edu` unless otherwise indicated. **All submissions must be as PDF or Jupyter Notebooks. `.docx` or any other type will not be accepted.
+All assignments are to be submitted electronically through email to `XXX [at] caltech [dot] edu` unless otherwise indicated. **All submissions must be as PDF or Jupyter Notebooks. `.docx` or any other type will not be accepted.**
 
- [**Homework 1**]() \| Due March XX, 2017  by XX pm
+ [**Homework 1**]() \| Due April 13, 2017  by 1:00 pm
 
- **Homework 2** \| Due March XX, 2017  by XX pm
+ **Homework 2** \| Due April 20, 2017  by 1:00pm
 
- **Homework 3** \| Due March XX, 2017  by XX pm
+ **Homework 3** \| Due April 27, 2017  by 1:00pm
 
- **Homework 4** \| Due March XX, 2017  by XX pm
+ **Homework 4** \| Due May 4, 2017  by 1:00pm
 
- **Homework 5** \| Due March XX, 2017  by XX pm
+ **Homework 5** \| Due May 11, 2017  by 1:00pm
 
- **Homework 6** \| Due March XX, 2017  by XX pm
+ **Homework 6** \| Due May 18, 2017  by 1:00pm
 
- **Homework 7** \| Due March XX, 2017  by XX pm
+ **Homework 7** \| Due May 25, 2017  by 1:00pm
+
+ **Homework 8** \| Due June 1, 2017  by 1:00pm
+
+ **Homework 9** \| Due June 8, 2017  by 1:00pm
+
+ **Homework 10** \| Due June 15, 2017  by 1:00pm
