--- a/_posts/2016-12-19-people.md
+++ b/_posts/2016-12-19-people.md
@@ -10,7 +10,7 @@ categories: posts
 
 <div id="im" >
 <figure>
-<a href="http://www.rpgroup.caltech.edu/"> Rob Phillips </a><br />
+<a href="http://www.rpgroup.caltech.edu/"><b>Rob Phillips</b></a><br />
 <img src="../../../../images/people/rob.jpg" width="175"><br/>
 <figcaption>
 <span style="font-family: courier"> phillips [at] pboc [dot] caltech [dot] edu</span>
@@ -88,7 +88,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <img src="../../../../images/people/tal.jpg" width="175"><br/>
 <figcaption>
 <i> G4 - Physics</i><br />
-<i> topic: TBD </i>
+<i> topic: TBD </i><br />
 <span style="font-family: courier">@ tal.einav</span>
 </figcaption>
 </figure>
@@ -125,7 +125,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <figcaption>
 <i> G4 - Physics</i><br />
 <i> topic: TBD </i><br />
-<span style="font-family: courier">@ shirokaw</span>
+<span style="font-family: courier">@ wireland</span>
 </figcaption>
 </figure>
 </div>
@@ -199,7 +199,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <img src="../../../../images/people/manuel.jpg" width="175"><br/>
 <figcaption>
 <i> G3 - Biochemistry & Molecular Biophysics</i><br />
-<i> topic: TBD </i>
+<i> topic: TBD </i><br />
 <span style="font-family: courier">@ mrazomej</span>
 </figcaption>
 </figure>
@@ -241,4 +241,5 @@ All emails are the provided `name` at `caltech [dot] edu`
 <i>Undergrad -- Division</i><br />
 <span style="font-family: courier">@ szemsky</span>
 </figcaption>
-</div> -->
+</figure>
+</div>
