More typo fixes.

--- a/_posts/2016-12-19-people.md
+++ b/_posts/2016-12-19-people.md
@@ -100,7 +100,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <img src="../../../../images/people/gloriaha.jpg" width="175"><br/>
 <figcaption>
 <i>Junior - Chemical Engineering</i><br />
-<span style="font-family: courier">@ email</span>
+<span style="font-family: courier">@ gha</span>
 </figcaption>
 </figure>
 </div>
