--- a/_posts/2013-12-09-about.md
+++ b/_posts/2013-12-09-about.md
@@ -6,6 +6,9 @@ categories: posts
 ---
 # Bi 1 - Principles of Biology
 
+# Note:
+This website is still being modified and updated. **All information hosted on this site is subject to change and does not represent the official state of the Bi1 2017 course.**
+
 ## About
 A host of new technologies have led to an explosion of fascinating data across the hierarchy of biology, from molecules to ecosystems, as well as the integration of biology with other sciences, including geology, physics, chemistry and mathematics. This course provides an introduction to the most exciting themes of modern biology through a series of case studies. Each of these examples, whether the examination of the critical role of keystone species in ecology or the resolution of key puzzles of modern biogeography using DNA sequencing or the advent of super resolution microscopy which provides an astonishing dynamic view of cells and the viruses that infect them, serves to demonstrate the overarching principles of modern biology.
 
