--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -21,10 +21,10 @@ progresses, these materials will be posted below.
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
 
-* [BE/Bi/NB 203 : Programming in the Biological Sciences](ihttp://justinbois.github.io/bootcamp/2016/)
+* [BE/Bi/NB 203 : Programming in the Biological Sciences](http://justinbois.github.io/bootcamp/2016/)
 
 * [Be/Bi 103 : Data Analysis in the Biological Sciences](http://www.bebi103.caltech.edu)
 
 * [CodeCademy course on Python](https://www.codecademy.com/learn/python)
 
-* [DataCap course on Python for data science](https://www.datacamp.com/courses/intro-to-python-for-data-science)
+* [DataCamp course on Python for data science](https://www.datacamp.com/courses/intro-to-python-for-data-science)
