Update of photos and other small changes.

--- a/_posts/2016-12-19-people.md
+++ b/_posts/2016-12-19-people.md
@@ -136,7 +136,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <b>Jessica Li</b><br />
 <img src="../../../../images/people/placeholder.png" width="175"><br/>
 <figcaption>
-<i>Undergrad -- Division</i><br />
+<i>Undergrad - Division</i><br />
 <span style="font-family: courier">@ jdli</span>
 </figcaption>
 </figure>
@@ -147,9 +147,9 @@ All emails are the provided `name` at `caltech [dot] edu`
 <div id="im">
 <figure>
 <b>Emily Miao</b><br />
-<img src="../../../../images/people/placeholder.png" width="175"><br/>
+<img src="../../../../images/people/emiaou.jpg" width="175"><br/>
 <figcaption>
-<i>Undergrad -- Division</i><br />
+<i> Junior - Chemical Engineering</i><br />
 <span style="font-family: courier">@ emiaou</span>
 </figcaption>
 </figure>
@@ -210,7 +210,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <figure>
 <b>Janice Jeon</b><br />
 
-<img src="../../../../images/people/placeholder.png" width="175"><br/>
+<img src="../../../../images/people/jjeon.jpg" width="175"><br/>
 <figcaption>
 <i>Undergrad -- Division</i><br />
 <span style="font-family: courier">@ jjeon</span>
