--- a/_posts/2016-12-19-people.md
+++ b/_posts/2016-12-19-people.md
@@ -212,7 +212,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 
 <img src="../../../../images/people/jjeon.jpg" width="175"><br/>
 <figcaption>
-<i>Undergrad -- Division</i><br />
+<i>Junior - Bioengineering</i><br />
 <span style="font-family: courier">@ jjeon</span>
 </figcaption>
 </figure>
