--- a/_posts/2016-12-19-people.md
+++ b/_posts/2016-12-19-people.md
@@ -236,7 +236,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <figure>
 <b>Sasha Zemsky</b><br />
 
-<img src="../../../../images/people/placeholder.png" width="175"><br/>
+<img src="../../../../images/people/szemsky.jpg" width="175"><br/>
 <figcaption>
 <i>Undergrad -- Division</i><br />
 <span style="font-family: courier">@ szemsky</span>
