More people updates

--- a/_posts/2016-12-19-people.md
+++ b/_posts/2016-12-19-people.md
@@ -25,7 +25,7 @@ All emails are the provided `name` at `caltech [dot] edu`
 <div id="im">
 <figure>
 <b>Caroline Atyeo</b><br />
-<img src="../../../../images/people/catyeo.jpg" width="175"><br/>
+<img src="../../../../images/people/catyeo.png" width="175"><br/>
 <figcaption>
 <i>Junior - Bioengineering</i><br />
 <span style="font-family: courier">@ catyeo</span>
@@ -134,9 +134,9 @@ All emails are the provided `name` at `caltech [dot] edu`
 <div id="im">
 <figure>
 <b>Jessica Li</b><br />
-<img src="../../../../images/people/placeholder.png" width="175"><br/>
+<img src="../../../../images/people/jli.jpg" width="175"><br/>
 <figcaption>
-<i>Undergrad - Division</i><br />
+<i>Junior - Bioengineering</i><br />
 <span style="font-family: courier">@ jdli</span>
 </figcaption>
 </figure>
