--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -12,10 +12,12 @@ This website is still being modified and updated. **All information hosted on th
 ## About
 A host of new technologies have led to an explosion of fascinating data across the hierarchy of biology, from molecules to ecosystems, as well as the integration of biology with other sciences, including geology, physics, chemistry and mathematics. This course provides an introduction to the most exciting themes of modern biology through a series of case studies. Each of these examples, whether the examination of the critical role of keystone species in ecology or the resolution of key puzzles of modern biogeography using DNA sequencing or the advent of super resolution microscopy which provides an astonishing dynamic view of cells and the viruses that infect them, serves to demonstrate the overarching principles of modern biology.
 
+
+
 ## Where and When?
 The course will be composed of three lecture sessions and one recitation per week. Occasionally, there will be a computational tutorial session in lieu of recitation.
 
-**Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:55pm in Ramo Auditorium
+**Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:25pm in 199 Kerckhoff
 
 **Recitations \|** Mondays - Thursdays, 7:00pm - 7:55pm & 8:00 - 8:55pm in Broad 200<br/>
 **<span style="color: #FFFFFF;">Recitations</span> \|** Fridays, x Fridays, 1:00-1:55 pm and 2:00 - 2:55pm in BBB 101
