--- a/_posts/2017-01-28-people.md
+++ b/_posts/2017-01-28-people.md
@@ -11,7 +11,7 @@ categories: posts
 <div id="im" >
 <figure>
 <a href="http://www.rpgroup.caltech.edu/"><b>Rob Phillips</b></a><br />
-<img src="../../../../images/people/rob.jpg" width="175"><br/>
+<img src="../../../../images/people/rob.png" width="175"><br/>
 <figcaption>
 <span style="font-family: courier"> phillips [at] pboc [dot] caltech [dot] edu</span>
 </figcaption>
