--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -7,7 +7,7 @@ categories: posts
 
 ## Meetings and Recitations
 Lecture occurs twice a week (Tuesdays and Thursdays) from 1:00 - 2:25 pm in
-100 Broad. These sessions will involve lecture and in-class participation including back-of-the-envelope estimations, derivations, and natural philosophy. This course is
+119 Kerckhoff. These sessions will involve lecture and in-class participation including back-of-the-envelope estimations, derivations, and natural philosophy. This course is
 designed to serve as an overview of some of the overarching principles of
 biological inquiry and address how biology fits in along physics, chemistry, mathematics, and engineering.
 
@@ -27,7 +27,7 @@ will be the language of instruction for this course. Please see the
 computing environment.
 
 ## Homework
-Homework will be assigned at the beginning of each week and will be due the following week at the beginning of class. **All homework submissions are electronic and must be in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages` will not be accepted.**
+Homework will be assigned on Thursdays will be due the following Thursday at the beginning of class. **All homework submissions are electronic and must be in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages` will not be accepted.**
 
 To ensure proper grading, all homework must be submitted via email to `xxx [at] caltech [dot] edu` with the following filename:
 
@@ -53,16 +53,18 @@ Finally, you must follow the [Caltech honor code](https://www.gradoffice.caltech
 > No member of the Caltech community shall take unfair advantage of any other member of the Caltech community.
 
 
-## Grading and Attendance
+## Grading, Attendance, and Electronic Devices
 
-There will be no exams, quizzes, reports, or research proposals. The entirety of your grade comes from completing the homework. **Late homework submissions will not be accepted without penalty**. For each day a homework assignment is late, a 10% deduction will be made from the maximum possible score. For example, a homework received five days late will maximally earn 50%.
+There will be no exams, quizzes, reports, or research proposals. The entirety of your grade comes from completing the homework. **Late homework submissions will not be accepted without penalty**. For each day a homework assignment is late, a 10% deduction will be made from the maximum possible score. For example, a homework received five days late will maximally earn 50%. Attendance is expected of all students in the class. As a general rule "on time" means that you are sitting in the class room five minutes early.
 
-Attendance is expected of all students in the class. As a general rule "on time" means that you are sitting in the class room five minutes early.
 
+You may use an electronic device (e.g., tablet, laptop) to take notes during class only if you use it for this purpose. We will ask you to turn off your electronic devices or ask you to leave, if their use is off-topic or distracting to others.
 
 ## Communication
 You may contact the course TAs through email at any time, but please do not unnecessarily 'spam' them with emails. Each graduate TA will be the 'expert' on one or two particular topics throughout the course. Please use them as a primary contact for that topic.
 
 
-## Absences and extensions
-No absence or extension on homework will be grated without an adequate and compelling reason. All extensions must be requested from the course instructor.
+## Absences, Extensions, and Ditch Day
+No absence or extension on homework will be granted without an adequate and compelling reason. All extensions require a note from a doctor or a dean
+
+In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended to two calendar days later (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 1:00 pm). Any course meetings affected by Ditch Day will be resecheduled and posted on the [website home page]().
