--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -17,9 +17,9 @@ A host of new technologies have led to an explosion of fascinating data across t
 ## Where and When?
 The course will be composed of three lecture sessions and one recitation per week. Occasionally, there will be a computational tutorial session in lieu of recitation.
 
-**Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:25pm in 199 Kerckhoff
+**Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:25pm in 119 Kerckhoff
 
 **Recitations \|** Mondays - Thursdays, 7:00pm - 7:55pm & 8:00 - 8:55pm in Broad 200<br/>
-**<span style="color: #FFFFFF;">Recitations</span> \|** Fridays, x Fridays, 1:00-1:55 pm and 2:00 - 2:55pm in BBB 101
+**<span style="color: #FFFFFF;">Recitations</span> \|** Fridays, 1:00-1:55 pm and 2:00 - 2:55pm in BBB 101
 
 **Computation Tutorials \|** Select Mondays 7:00 - 10:00 pm in Broad 100
