Made the group memeber page much cleaner using the beauty of liquid.

--- a/_posts/2017-01-28-people.md
+++ b/_posts/2017-01-28-people.md
@@ -5,241 +5,41 @@ cover: phage.jpg
 categories: posts
 ---
 
+test
+
 
 ## Instructor
 
-<div id="im" >
+{% for author in site.data.members %}
+{% if author.role == 'Professor' %}
+<div id="im">
 <figure>
-<a href="http://www.rpgroup.caltech.edu/"><b>Rob Phillips</b></a><br />
-<img src="../../../../images/people/rob.png" width="175"><br/>
+<b> <a href="{{ author.link }}">{{ author.name }}</a></b><br />
+<img src="{{ site.baseurl }}/images/people/{{ author.image }}"><br/>
 <figcaption>
-<span style="font-family: courier"> phillips [at] pboc [dot] caltech [dot] edu</span>
+<span style="font-family: courier"> {{ author.email }} </span>
 </figcaption>
+
 </figure>
 </div>
+{% endif %}
+{% endfor %}
+
+
 
 ## Teaching Assistants
 
-All emails are the provided `name` at `caltech [dot] edu`
-
+{% for author in site.data.members %}
+{% if author.role != 'Professor' %}
 <div id="im">
 <figure>
-<b>Caroline Atyeo</b><br />
-<img src="../../../../images/people/catyeo.png" width="175"><br/>
+<b> {{ author.name }} </b><br />
+<img src="{{ site.baseurl }}/images/people/{{ author.image }}" width="175"><br/>
 <figcaption>
-<i>Junior - Bioengineering</i><br />
-<span style="font-family: courier">@ catyeo</span>
+<i> {{ author.year }} - {{ author.major }}</i><br />
+<span style="font-family: courier"> @ {{ author.email }}</span>
 </figcaption>
 </figure>
 </div>
-
-<div id="im">
-<figure>
-<b> Stephanie Barnes </b><br />
-<img src="../../../../images/people/sbarnes.jpg"> <br/>
-<figcaption>
-<i> G6 - Bioengineering </i><br/>
-<i>topic: photosynthesis</i><br />
-<span style="font-family: courier"> @ sbarnes </span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b> Suzy Beeler</b> <br />
-<img src="../../../../images/people/sbeeler.jpg"> <br/>
-<figcaption>
-<i> G2 - Biology</i><br />
-<i>topic: biogeography </i> <br />
-<span style="font-family: courier"> @ sbeeler</span>
-</figcaption>
-</figure>
-</div>
-
-
-<div id="im">
-<figure>
-<b> Nathan Belliveau</b><br />
-<img src="../../../../images/people/nathan.jpg" width="175"><br/>
-<figcaption>
-<i> G5 - Bioengineering </i> <br />
-<i> topic: TBD </i><br />
-<span style="font-family: courier"> @ nbellive</span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b> Griffin Chure</b><br />
-<img src="../../../../images/people/gchure.jpg" width="175"><br/>
-<figcaption>
-<i> G4 - Biochemistry & Molecular Biophysics</i><br />
-<i> topic: programming </i><br />
-<span style="font-family: courier">@ gchure</span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b> Tal Einav</b><br />
-<img src="../../../../images/people/tal.jpg" width="175"><br/>
-<figcaption>
-<i> G4 - Physics</i><br />
-<i> topic: TBD </i><br />
-<span style="font-family: courier">@ tal.einav</span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b>Gloria Ha</b><br />
-<img src="../../../../images/people/gloriaha.jpg" width="175"><br/>
-<figcaption>
-<i>Junior - Chemical Engineering</i><br />
-<span style="font-family: courier">@ gha</span>
-</figcaption>
-</figure>
-</div>
-
-
-<div id="im">
-<figure>
-<b> Soichi Hirokawa</b><br />
-<img src="../../../../images/people/soichi.jpg" width="175"><br/>
-<figcaption>
-<i> G3 - Applied Physics</i><br />
-<i> topic: TBD </i><br />
-<span style="font-family: courier">@ shirokaw</span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b> Bill Ireland</b><br />
-<img src="../../../../images/people/wireland.jpg" width="175"><br/>
-<figcaption>
-<i> G4 - Physics</i><br />
-<i> topic: TBD </i><br />
-<span style="font-family: courier">@ wireland</span>
-</figcaption>
-</figure>
-</div>
-
-
-<div id="im">
-<figure>
-<b>Jessica Li</b><br />
-<img src="../../../../images/people/jli.jpg" width="175"><br/>
-<figcaption>
-<i>Junior - Bioengineering</i><br />
-<span style="font-family: courier">@ jdli</span>
-</figcaption>
-</figure>
-</div>
-
-
-
-<div id="im">
-<figure>
-<b>Emily Miao</b><br />
-<img src="../../../../images/people/emiaou.jpg" width="175"><br/>
-<figcaption>
-<i> Junior - Chemical Engineering</i><br />
-<span style="font-family: courier">@ emiaou</span>
-</figcaption>
-</figure>
-</div>
-
-
-<div id="im">
-<figure>
-<b>Anvita Mishra</b><br />
-
-<img src="../../../../images/people/anvita.jpg" width="175"><br/>
-<figcaption>
-<i>Junior - Bioengineering</i><br />
-<span style="font-family: courier">@ ammishra</span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b>Andrew Montequin</b><br />
-<img src="../../../../images/people/amontequin.png" width="175"><br/>
-<figcaption>
-<i>Senior - Bioengineering</i><br />
-<span style="font-family: courier">@ amontequin</span>
-</figcaption>
-</figure>
-</div>
-
-
-
-<div id="im">
-<figure>
-<b> Muir Morrison</b><br />
-<img src="../../../../images/people/muir.jpg" width="175"><br/>
-<figcaption>
-<i> G4 - Physics</i><br />
-<i> topic: TBD </i>
-<span style="font-family: courier">@ muir</span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b> Manuel Razo-Mejia</b><br />
-<img src="../../../../images/people/manuel.jpg" width="175"><br/>
-<figcaption>
-<i> G3 - Biochemistry & Molecular Biophysics</i><br />
-<i> topic: TBD </i><br />
-<span style="font-family: courier">@ mrazomej</span>
-</figcaption>
-</figure>
-</div>
-
-
-<div id="im">
-<figure>
-<b>Janice Jeon</b><br />
-
-<img src="../../../../images/people/jjeon.jpg" width="175"><br/>
-<figcaption>
-<i>Junior - Bioengineering</i><br />
-<span style="font-family: courier">@ jjeon</span>
-</figcaption>
-</figure>
-</div>
-
-
-<div id="im">
-<figure>
-<b>Claudia Jette</b><br />
-
-<img src="../../../../images/people/cjette.png" width="175"><br/>
-<figcaption>
-<i>G1 - Biochemistry & Molecular Biophysics</i><br />
-<i> topic: TBD </i><br />
-<span style="font-family: courier">@ cjette</span>
-</figcaption>
-</figure>
-</div>
-
-<div id="im">
-<figure>
-<b>Sasha Zemsky</b><br />
-
-<img src="../../../../images/people/szemsky.jpg" width="175"><br/>
-<figcaption>
-<i>Undergrad -- Division</i><br />
-<span style="font-family: courier">@ szemsky</span>
-</figcaption>
-</figure>
-</div>
+{% endif %}
+{% endfor %}
