Big update to website. Almost finished!

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -9,14 +9,17 @@ Many homework problems in this course will require you to write computer program
 
 ## Tutorials
 We will have several computational tutorials throughout the term. As the course
-progresses, these materials will be posted below.
+progresses, these materials will be posted below. **Note:** *In some browsers (Firefox primarily), the end of each sentence is clipped off, making it difficult to read. If this is occurring, please try using another browser (Chrome, Safari, etc).*
 
-* [Tutorial 0a: Configuring your computer]() \| This tutorial will walk you through how to install a Python 3.5 scientific computing environment.
+* [Tutorial 0a: Configuring your computer]({{ site.baseurl }}/code/t0a_setting_up_python.html) \| This tutorial will walk you through how to install a Python 3.5 scientific computing environment.
 
-* [Tutorial 0b: Using the Jupyter notebook]() \| This tutorial will teach you how to write code and text in Jupyter notebooks for homework submissions.
+* [Tutorial 0b: Using the Jupyter notebook]({{ site.baseurl }}/code/t0b_jupyter_notebooks.html) \| This tutorial will teach you how to write code and text in Jupyter notebooks for homework submissions.
 
-* [Tutorial 0c: A Primer on Python Syntax]() \| This tutorial will walk you through the basics of programming in Python.
+* [Tutorial 0c: A Primer on Python Syntax]({{ site.basurl }}/code/t0c_python_syntax_and_plotting.html) \| This tutorial will walk you through the basics of programming in Python.
 
+* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[**data set**]]({{ site.baseurl }}/datasets/mabuya_atlantica.zip)
+
+* [Tutorial 2: Stochastic Simulations]({{ site.baseurl }}/code/t02_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift.
 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
