--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -7,22 +7,20 @@ categories: posts
 
 All assignments are to be submitted electronically through email to `XXX [at] caltech [dot] edu` unless otherwise indicated. **All submissions must be as PDF or Jupyter Notebooks. `.docx` or any other type will not be accepted.**
 
- [**Homework 1**]() \| Due April 13, 2017  by 1:00 pm
+ [**Homework 1**]() \| *Biogeography*. Due April 13, 2017  by 1:00 pm [\[**data set**\]]({{ site.baseurl }}/datasets/hw1_problem2_sequences.zip)
 
- **Homework 2** \| Due April 20, 2017  by 1:00pm
+ **Homework 2** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
 
- **Homework 3** \| Due April 27, 2017  by 1:00pm
+ **Homework 3** \| *Evolution*. Due April 27, 2017  by 1:00pm
 
- **Homework 4** \| Due May 4, 2017  by 1:00pm
+ **Homework 4** \| *Population Genetics.* Due May 4, 2017  by 1:00pm
 
- **Homework 5** \| Due May 11, 2017  by 1:00pm
+ **Homework 5** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm
 
- **Homework 6** \| Due May 18, 2017  by 1:00pm
+ **Homework 6** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm
 
- **Homework 7** \| Due May 25, 2017  by 1:00pm
+ **Homework 7** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm
 
- **Homework 8** \| Due June 1, 2017  by 1:00pm
+ **Homework 8** \| *The Body Plan*. Due June 1, 2017  by 1:00pm
 
- **Homework 9** \| Due June 8, 2017  by 1:00pm
-
- **Homework 10** \| Due June 15, 2017  by 1:00pm
+ **Homework 9** \| *Physical Limits*. Due June 8, 2017  by 1:00pm
