--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -29,14 +29,16 @@ computing environment.
 ## Homework
 Homework will be assigned on Thursdays will be due the following Thursday at the beginning of class. **All homework submissions are electronic and must be in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages` will not be accepted.**
 
-To ensure proper grading, all homework must be submitted via email to `xxx [at] caltech [dot] edu` with the following filename:
+To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
 
   * **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#_prob#.ipynb`** for
   problems requiring code.
 
 The subject line of your submission email must have the following format:
 
-  * **`Submission of HW# for Lastname Firstname`**
+  * **`[Homework_#] Submission of HW# for Firstname Lastname`**
+
+**Any submission not abiding by this format will not be graded!**
 
 ## Collaboration Policy and the Honor Code
 
@@ -62,6 +64,8 @@ You may use an electronic device (e.g., tablet, laptop) to take notes during cla
 
 ## Communication
 You may contact the course TAs through email at any time, but please do not unnecessarily 'spam' them with emails. Each graduate TA will be the 'expert' on one or two particular topics throughout the course. Please use them as a primary contact for that topic.
+
+The course [Piazza](http://piazza.com/caltech/spring2017/bi1) can be used for general questions. You may discuss homework and post public questions about problems, topics, or things of general interest to the Bi1 students and course staff. You may also post questions anonymously. The course TAs will monitor this page with regularity and will respond to valid questions. 
 
 
 ## Absences, Extensions, and Ditch Day
