--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -16,20 +16,20 @@ categories: posts
 | 2 | Tuesday, April 11 | How do keystone species influence populations?| |
 | 2 | Thursday, April 13 | Rapid evolution and a detailed analysis of trophic cascades. | [Homework 2 Released](), Homework 1 Due |
 | 3 | Tuesday, April 18 | The fossil record, vestigial limbs, and "Biology's greatest idea". | |
-| 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | [Homework 3 Released](), Homework 2 Due |
+| 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | Homework 3 Released, Homework 2 Due |
 | 4 | Tuesday, April 25 | The key facts of evolution and how we know how about them: variation, heritability, the forces of evolution. | |
-| 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | [Homework 4 Released](), Homework 3 Due |
+| 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | Homework 4 Released, Homework 3 Due |
 | 5 | Tuesday, May 2 | How do cells make a living? | |
-| 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | [Homework 5 Released](), Homework 4 Due |
+| 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | Homework 5 Released, Homework 4 Due |
 | 6 | Tuesday, May 9 | Cell biology, organelles, and phase transitions. We examine how cells organize their intracellular milieu. | |
-| 6 | Thursday, May 11 | How do cells decide what to eat? We examine the regulation of gene expression through the lens of statistical mechanics. | [Homework 6 Released](), Homework 5 Due |
+| 6 | Thursday, May 11 | How do cells decide what to eat? We examine the regulation of gene expression through the lens of statistical mechanics. | Homework 6 Released, Homework 5 Due |
 | 7 | Tuesday, May 16 |  How do you build a fly? A detailed dissection of the basics of *Drosophila* morphogenesis. | |
-| 7 | Thursday, May 18 | How do cells decide where to go? We work out bacterial chemotaxis from the ground up. | [Homework 7 Released](), Homework 6 Due |
+| 7 | Thursday, May 18 | How do cells decide where to go? We work out bacterial chemotaxis from the ground up. | Homework 7 Released, Homework 6 Due |
 | 8 | Tuesday, May 23 | How do cells sense? We discuss the physical limits of chemical detection. | |
-| 8 | Thursday, May 25 | How well can you see? We work through the biology of vision. | [Homework 8 Released](), Homework 7 Due |
+| 8 | Thursday, May 25 | How well can you see? We work through the biology of vision. | Homework 8 Released, Homework 7 Due |
 | 9 | Tuesday, May 30 |  Physical limits to how cells and organisms detect stimuli from the world around them. | |
-| 9 | Thursday, June 1 | Lecture used for material that took longer than expected. | [Homework 9 Released](), Homework 8 Due |
+| 9 | Thursday, June 1 | Lecture used for material that took longer than expected. | Homework 9 Released, Homework 8 Due |
 | 10 | Tuesday, June 6 | Probability as the language of biology. | |
-| 10 | Thursday, June 8| Where biology fits into modern science and engineering. | [Homework 10 Released](), Homework 9 Due |
+| 10 | Thursday, June 8| Where biology fits into modern science and engineering. |  Homework 9 Due |
 | 11 | Tuesday, June 13 | No Class | |
-| 11 | Thursday, June 15 | No Class | Homework 10 Due |
+| 11 | Thursday, June 15 | No Class | |
