Update of website stuff

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -10,8 +10,14 @@ categories: posts
 Readings mentioned specifically in class will be listed here as the course progresses.
 
 
-**Week One: Biogeography** <br />
+{% assign readings = site.data.papers %}
+{% assign dir = "http://rpgroup.caltech.edu/courses/bi1_2017/papers/" %}
+{% for week in readings %}
+<span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
 
-* [Freshwater paths across the ocean: Molecular phylogeny of the frog *Ptychadena newtoni* gives insights into amphibian colonization of oceanic islands]() by G. John Measey et al., *Journal of Biogeography* (2007) **34**, 7-20.
+{% for p in week[1] %}
 
-* [Nepalese origin of cholera epidemic in Haiti]() by R. R. Frerichs et al., *Clinical Microbiology and Infectious Diseases* (2012), **18**, E158-E163
+[**{{ p.title }}**]({{ dir }}{{ p.PDF }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }} {{ p.number }} {{ p.year }}.
+
+{% endfor %}
+{% endfor %}
