Updates to website

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -3,6 +3,7 @@ layout: post
 title: Readings
 cover: readings.jpg
 categories: posts
+permalink: readings
 ---
 
 ## In-Class Readings
@@ -11,13 +12,13 @@ Readings mentioned specifically in class will be listed here as the course progr
 
 
 {% assign readings = site.data.papers %}
-{% assign dir = "http://rpgroup.caltech.edu/courses/bi1_2017/papers/" %}
+{% assign dir = "http://www.rpgroup.caltech.edu/courses/bi1_2017/papers/" %}
 {% for week in readings %}
 <span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
 
 {% for p in week[1] %}
 
-[**{{ p.title }}**]({{ dir }}{{ p.PDF }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }} {{ p.number }} {{ p.year }}.
+[{{ p.title }}]({{ dir }}{{ p.PDF }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }} {{ p.number }} {{ p.year }}.
 
 {% endfor %}
 {% endfor %}
