--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -3,6 +3,7 @@ layout: post
 title: Programming
 cover: code.jpg
 categories: posts
+permalink: programming
 ---
 
 Many homework problems in this course will require you to write computer programs to solve them. No prior programming experience is needed for this course and all materials necessary to learn the required skills will be available through the course.
