--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -3,10 +3,28 @@ layout: post
 title: Homework
 cover: homework.jpg
 categories: posts
+permalink: homework
 ---
 
-All assignments are to be submitted electronically through email to `XXX [at] caltech [dot] edu` unless otherwise indicated. **All submissions must be as PDF or Jupyter Notebooks. `.docx` or any other type will not be accepted.**
+## Submission
+**All homework submissions are electronic and must be
+in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages`
+will not be accepted.**
 
+To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
+
+  * **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#_prob#.ipynb`** for
+  problems requiring code.
+
+The subject line of your submission email must have the following format:
+
+  * **`[Homework #] Submission of HW# for Firstname Lastname`**
+
+For example, a submission for the first homework set would be submitted by email with the subject line **`[Homework 1] Submission of HW1 for Barbara MacClintock`**. The attachments would be **`McClintock_Barbara_hw1.pdf`** and **`McClintock_Barbara_hw1_prob3.ipynb`**.
+
+**Any submission not abiding by this format will not be graded!**
+
+## Assignments
  [**Homework 1**]() \| *Biogeography*. Due April 13, 2017  by 1:00 pm [\[**data set**\]]({{ site.baseurl }}/datasets/hw1_problem2_sequences.zip)
 
  **Homework 2** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
