--- a/_posts/2017-01-28-people.md
+++ b/_posts/2017-01-28-people.md
@@ -3,9 +3,10 @@ layout: post
 title: People
 cover: phage.jpg
 categories: posts
+permalink: people
 ---
 
-test
+All emails are given as `@ name [dot] caltech [dot] edu` unless otherwise specified. 
 
 
 ## Instructor
