--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -3,27 +3,31 @@ layout: post
 title: policies
 cover: policies.jpg
 categories: posts
+permalink: policies
 ---
 
 ## Meetings and Recitations
-Lecture occurs twice a week (Tuesdays and Thursdays) from 1:00 - 2:25 pm in
-119 Kerckhoff. These sessions will involve lecture and in-class participation including back-of-the-envelope estimations, derivations, and natural philosophy. This course is
-designed to serve as an overview of some of the overarching principles of
-biological inquiry and address how biology fits in along physics, chemistry, mathematics, and engineering.
+Lecture occurs twice a week (Tuesdays and Thursdays) from 1:00 - 2:25 pm in 119
+Kerckhoff. These sessions will involve lecture and in-class participation
+including back-of-the-envelope estimations, derivations, and natural
+philosophy. This course is designed to serve as an overview of some of the
+overarching principles of biological inquiry and address how biology fits in
+along physics, chemistry, mathematics, and engineering.
 
 Recitation sessions are held once a week. These occur in the evening on
-Monday's through Thursdays and on Friday afternoons. These sessions are held with graduate and undergraduate teaching assistants and are designed to aid you on problem sets and further explain the topics covered in class. On several occasions, you will be able to engage in performing experiments and analyzing your data.
+Monday's through Thursdays and on Friday afternoons. These sessions are held
+with graduate and undergraduate teaching assistants and are designed to aid you
+on problem sets and further explain the topics covered in class.
 
 Computational prowess is an incredibly useful skill in the modern biological
 era. Many homework problems will require you to write computer programs to
-execute   calculations, analyze experimental data, perform simulations, and
+execute  calculations, analyze experimental data, perform simulations, and
 more. No prior computer programming experience is required for this course. The
-TA's will host computational tutorial sessions three to four times during the
-course and will take place on Mondays from 7:00 to 10:00 pm in 100 Broad. On
-weeks where these tutorials take place, recitation will not occur. While many
-programming languages are used in biology (R, C++, Java, Matlab, etc), Python
-will be the language of instruction for this course. Please see the
-[programming page]() for instructions on setting up a scientific Python
+TA's will host computational tutorial sessions five times during the course and
+will take during normal recitation times and locations. While many programming
+languages are used in biology (R, C++, Java, Matlab, etc), Python will be the
+language of instruction for this course. Please see the [programming page]({{
+site.baseurl }}/programming) for instructions on setting up a scientific Python
 computing environment.
 
 ## Homework
@@ -36,39 +40,77 @@ To ensure proper grading, all homework must be submitted via email to `bi1.calte
 
 The subject line of your submission email must have the following format:
 
-  * **`[Homework_#] Submission of HW# for Firstname Lastname`**
+  * **`[Homework #] Submission of HW# for Firstname Lastname`**
+
+For example, a submission for the first homework set would be submitted by
+email with the subject line **`[Homework 1] Submission of HW1 for Barbara
+McClintock`**. The attachments would be **`McClintock_Barbara_hw1.pdf`** and
+**`McClintock_Barbara_hw1_prob3.ipynb`**.
+
+
 
 **Any submission not abiding by this format will not be graded!**
 
+
 ## Collaboration Policy and the Honor Code
 
-Nearly all of scientific discovery has developed due to collaboration. You may work with others on your homework assignments, however **all work handed in must be your own**. This means that you are not allowed to hand in work copy pasted from those you worked with.
+Collaboration is imperative to scientific discovery. You may work with others on your homework assignments, however **all work handed in must be your own**. This means that you are not allowed to hand in work copy pasted from those you worked with.
 
-For programming, please follow the [50 foot rule from CS11](http://courses.cms.caltech.edu/cs11/material/python/collab.html) which reads
-> [...] If you help another student with their programming problems (including debugging), you must not consult your own code while doing so. Specifically, we ask that your own code be at least 50 feet away i.e. not visible to you or the person you are helping while you are helping them.
-This means that you may work with each other on programming problems but you may not copy others code directly. [...] **Help them with your brain, not with your code**.
+For programming, please follow the [50 foot rule from
+CS11](http://courses.cms.caltech.edu/cs11/material/python/collab.html) which
+reads
 
-You may use resources on the internet, primary literature, or textbooks to help you answer the questions, although you must provide a reference. You may not use previous homework questions or solutions from previous years of this course or other courses like it.
+> [...] If you help another student with their programming problems
+(including debugging), you must not consult your own code while doing so.
+Specifically, we ask that your own code be at least 50 feet away i.e. not
+visible to you or the person you are helping while you are helping them. This
+means that you may work with each other on programming problems but you may not
+copy others code directly. [...] **Help them with your brain, not with your
+code**.
+
+You may use resources on the internet, primary literature, or textbooks to help
+you answer the questions, although you must provide a reference. You may not
+use previous homework questions or solutions from previous years of this course
+or other courses like it.
 
 Finally, you must follow the [Caltech honor code](https://www.gradoffice.caltech.edu/current/hc) which states
 
 > No member of the Caltech community shall take unfair advantage of any other member of the Caltech community.
 
+We have designed the computational sections to provide you with all of the
+information you need to complete the problems described in the homework. While
+you may use any of the code provided in the tutorials verbatim to solve your
+homework, please do not "copy-and-paste" it directly into your notebook. We
+will often use different variable names and some hard-coded numbers in the
+tutorials than you will use in your homework. To make sure you understand what
+each line of the code is actually doing, you should type it out by hand.
+
 
 ## Grading, Attendance, and Electronic Devices
 
-There will be no exams, quizzes, reports, or research proposals. The entirety of your grade comes from completing the homework. **Late homework submissions will not be accepted without penalty**. For each day a homework assignment is late, a 10% deduction will be made from the maximum possible score. For example, a homework received five days late will maximally earn 50%. Attendance is expected of all students in the class. As a general rule "on time" means that you are sitting in the class room five minutes early.
+There will be no exams, quizzes, reports, or research proposals. The entirety
+of your grade comes from completing the homework. **Late homework submissions
+will not be accepted without penalty**. For each day a homework assignment is
+late, a 10% deduction will be made from the maximum possible score. For
+example, a homework received five days late will maximally earn 50%. Attendance
+is expected of all students in the class. As a general rule "on time" means
+that you are sitting in the class room five minutes early.
 
 
 You may use an electronic device (e.g., tablet, laptop) to take notes during class only if you use it for this purpose. We will ask you to turn off your electronic devices or ask you to leave, if their use is off-topic or distracting to others.
 
 ## Communication
-You may contact the course TAs through email at any time, but please do not unnecessarily 'spam' them with emails. Each graduate TA will be the 'expert' on one or two particular topics throughout the course. Please use them as a primary contact for that topic.
+You may contact the course TAs through email at any time, but please do not
+unnecessarily 'spam' them with emails.
 
-The course [Piazza](http://piazza.com/caltech/spring2017/bi1) can be used for general questions. You may discuss homework and post public questions about problems, topics, or things of general interest to the Bi1 students and course staff. You may also post questions anonymously. The course TAs will monitor this page with regularity and will respond to valid questions. 
+The course [Piazza](http://piazza.com/caltech/spring2017/bi1) can be used for
+general questions. You may discuss homework and post public questions about
+problems, topics, or things of general interest to the Bi1 students and course
+staff. You may also post questions anonymously. The course TAs will monitor
+this page with regularity and will respond to valid inquiries.
 
 
 ## Absences, Extensions, and Ditch Day
 No absence or extension on homework will be granted without an adequate and compelling reason. All extensions require a note from a doctor or a dean
 
-In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended to two calendar days later (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 1:00 pm). Any course meetings affected by Ditch Day will be resecheduled and posted on the [website home page]().
+In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended to two calendar days later (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 1:00 pm). Any course meetings affected by Ditch Day will be resecheduled and posted on the [website home page]({{ site.baseurl }}/about).
