--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -3,11 +3,11 @@ layout: post
 title: Syllabus
 cover: syllabus.jpg
 categories: posts
+permalink: syllabus
 ---
 
 
 ## Schedule
-
 
 | Week | Date | Topic | Homework |
 | -- | -- | -- | -- |
