--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -3,6 +3,7 @@ layout: post
 title: About
 cover: about_blank.png
 categories: posts
+permalink: about
 ---
 # Bi 1 - Principles of Biology
 
@@ -10,12 +11,22 @@ categories: posts
 This website is still being modified and updated. **All information hosted on this site is subject to change and does not represent the official state of the Bi1 2017 course.**
 
 ## About
-A host of new technologies have led to an explosion of fascinating data across the hierarchy of biology, from molecules to ecosystems, as well as the integration of biology with other sciences, including geology, physics, chemistry and mathematics. This course provides an introduction to the most exciting themes of modern biology through a series of case studies. Each of these examples, whether the examination of the critical role of keystone species in ecology or the resolution of key puzzles of modern biogeography using DNA sequencing or the advent of super resolution microscopy which provides an astonishing dynamic view of cells and the viruses that infect them, serves to demonstrate the overarching principles of modern biology.
-
+A host of new technologies have led to an explosion of fascinating data across
+the hierarchy of biology, from molecules to ecosystems, as well as the
+integration of biology with other sciences, including geology, physics,
+chemistry and mathematics. This course provides an introduction to the most
+exciting themes of modern biology through a series of case studies. Each of
+these examples, whether the examination of the critical role of keystone
+species in ecology or the resolution of key puzzles of modern biogeography
+using DNA sequencing or the advent of super resolution microscopy which
+provides an astonishing dynamic view of cells and the viruses that infect them,
+serves to demonstrate the overarching principles of modern biology.
 
 
 ## Where and When?
-The course will be composed of three lecture sessions and one recitation per week. Occasionally, there will be a computational tutorial session in lieu of recitation.
+The course will be composed of two lecture sessions and one recitation per
+week. Occasionally, there will be a computational tutorial session in lieu of
+recitation.
 
 **Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:25pm in 119 Kerckhoff
 
