--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -12,13 +12,17 @@ Readings mentioned specifically in class will be listed here as the course progr
 
 
 {% assign readings = site.data.papers %}
-{% assign dir = "http://www.rpgroup.caltech.edu/courses/bi1_2017/papers/" %}
+
 {% for week in readings %}
 <span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
 
 {% for p in week[1] %}
+{% assign dir = "http://www.rpgroup.caltech.edu/courses/bi1_2017/papers/{{ p.PDF }}" %}
+{% if p.link != None %}
+{% assign dir = p.link %}
+{% endif %}
 
-[{{ p.title }}]({{ dir }}{{ p.PDF }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }} {{ p.number }} {{ p.year }}.
+[{{ p.title }}]({{ dir }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
 
 {% endfor %}
 {% endfor %}
