Fixing some typos

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -28,7 +28,7 @@ The course will be composed of two lecture sessions and one recitation per
 week. Occasionally, there will be a computational tutorial session in lieu of
 recitation.
 
-**Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:25pm in 119 Kerckhoff
+**Lecture \|** Tuesdays & Thursdays, 1:00pm - 2:25pm in Baxter Lecture Hall
 
 **Recitations \|** Monday, Tuesday, Thursday; 7:00pm - 7:55pm & 8:00 - 8:55pm in Broad 200<br/>
 **<span style="color: #fafbfc;">Recitations</span> \|** Fridays, 1:00-1:55 pm and 2:00 - 2:55pm in BBB 101
