Removed homework links

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -25,7 +25,7 @@ For example, a submission for the first homework set would be submitted by email
 **Any submission not abiding by this format will not be graded!**
 
 ## Assignments
- [**Homework 1**]() \| *Biogeography*. Due April 13, 2017  by 1:00 pm [\[**data set**\]]({{ site.baseurl }}/datasets/hw1_problem2_sequences.zip)
+ **Homework 1** \| *Biogeography*. Due April 13, 2017  by 1:00 pm
 
  **Homework 2** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
 
