--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -12,9 +12,9 @@ permalink: syllabus
 | Week | Date | Topic | Homework |
 | -- | -- | -- | -- |
 | 1 | Tuesday, April 4 | How did amphibians get on the islands 200 miles off the coast of West Africa?| |
-| 1 | Thursday, April 6 | How did Cholera spread in Haiti following the 2010 earthquake aftermath? | [Homework 1 Released]() |
+| 1 | Thursday, April 6 | How did Cholera spread in Haiti following the 2010 earthquake aftermath? | Homework 1 Released |
 | 2 | Tuesday, April 11 | How do keystone species influence populations?| |
-| 2 | Thursday, April 13 | Rapid evolution and a detailed analysis of trophic cascades. | [Homework 2 Released](), Homework 1 Due |
+| 2 | Thursday, April 13 | Rapid evolution and a detailed analysis of trophic cascades. | Homework 2 Released, Homework 1 Due |
 | 3 | Tuesday, April 18 | The fossil record, vestigial limbs, and "Biology's greatest idea". | |
 | 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | Homework 3 Released, Homework 2 Due |
 | 4 | Tuesday, April 25 | The key facts of evolution and how we know how about them: variation, heritability, the forces of evolution. | |
