Fixed more typos

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -20,9 +20,9 @@ Readings mentioned specifically in class will be listed here as the course progr
 {% assign dir = "http://www.rpgroup.caltech.edu/courses/bi1_2017/papers/" %}
 {% if p.link != None %}
 {% assign dir = p.link %}
-[{{ p.title }}]({{ dir }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
-{% endif %}
+[{{ p.title }}]({{ p.link }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
+{% else %}
 [{{ p.title }}]({{ dir }}{{ p.PDF }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
-
+{% endif %}
 {% endfor %}
 {% endfor %}
