Removed unpure tutorials

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -20,7 +20,7 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 * [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[**data set**]]({{ site.baseurl }}/datasets/mabuya_atlantica.zip)
 
-* [Tutorial 2: Stochastic Simulations]({{ site.baseurl }}/code/t02_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift.
+<!-- * [Tutorial 2: Stochastic Simulations]({{ site.baseurl }}/code/t02_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift. -->
 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
