Big update of tutorials and fixing some broken links

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -16,9 +16,9 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 * [Tutorial 0b: Using the Jupyter notebook]({{ site.baseurl }}/code/t0b_jupyter_notebooks.html) \| This tutorial will teach you how to write code and text in Jupyter notebooks for homework submissions.
 
-* [Tutorial 0c: A Primer on Python Syntax]({{ site.basurl }}/code/t0c_python_syntax_and_plotting.html) \| This tutorial will walk you through the basics of programming in Python.
+* [Tutorial 0c: A Primer on Python Syntax]({{ site.baseurl }}/code/t0c_python_syntax_and_plotting.html) \| This tutorial will walk you through the basics of programming in Python.
 
-* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[**data set**]]({{ site.baseurl }}/datasets/mabuya_atlantica.zip)
+* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[**data set**]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/mabuya_atlantica.zip)
 
 <!-- * [Tutorial 2: Stochastic Simulations]({{ site.baseurl }}/code/t02_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift. -->
 
