Added the lcture notes and updated the sequence analysis tutorial

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -6,6 +6,16 @@ categories: posts
 permalink: readings
 ---
 
+## Lecture Notes
+
+We will post the slides from lecture as we go along in the course. Please note
+that these do not include the various goodies that we work out on the board in
+class, so don't use this as an alternative to attending lecture! Please do not
+share these notes with anyone outside of the course.
+
+[Lecture 1: Biogeography of Oceanic Islands](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec01_Biogeography_of_Oceanic_Islands.pdf)
+
+
 ## In-Class Readings
 
 Readings mentioned specifically in class will be listed here as the course progresses.
@@ -17,7 +27,7 @@ Readings mentioned specifically in class will be listed here as the course progr
 <span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
 
 {% for p in week[1] %}
-{% assign dir = "http://www.rpgroup.caltech.edu/courses/bi1_2017/papers/" %}
+{% assign dir = "http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/" %}
 {% if p.link != None %}
 {% assign dir = p.link %}
 [{{ p.title }}]({{ p.link }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
