--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -33,5 +33,5 @@ recitation.
 **Office Hours \|** Sundays, 3:00pm - 4:00pm and 6:00 - 8:00pm  in Broad 100.<br />
 **<span style="color: #fafbfc;">Office Hours</span> \|** Mondays, 4:00pm - 5:00pm and 9:00 - 11:00pm  in Broad 100.<br />
 **<span style="color: #fafbfc;">Office Hours</span> \|** Tuesdays, 9:00pm - 11:00pm in Broad 100.<br />
-**<span style="color: #fafbfc;">Office Hours</span> \|** Wednesdays, 2:30 - 3:30pm in Broad 159.<br />
+**<span style="color: #fafbfc;">Office Hours</span> \|** Wednesdays, 2:30 - 3:30pm in Broad 159 **with Rob**.<br />
 **<span style="color: #fafbfc;">Office Hours</span> \|** Wednesdays, 7:00pm - 9:00pm in Broad 100.<br />
