--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -13,8 +13,9 @@ that these do not include the various goodies that we work out on the board in
 class, so don't use this as an alternative to attending lecture! Please do not
 share these notes with anyone outside of the course.
 
-[Lecture 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec01_Biogeography_of_Oceanic_Islands.pdf) \| Biogeography of Oceanic Islands
+[Lecture 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec01_Biogeography_of_Oceanic_Islands.pdf) \| We begin our discussion of the biogeography in the context of  oceanic islands.
 
+[Lecture 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec02_Biogeography_Pathogens.pdf) \| We finish up our puzzle of oceanic islands and examine biogeography in the context of microbial pathogens.
 
 ## In-Class Readings
 
