Added videos to readings page.

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -32,8 +32,10 @@ Readings mentioned specifically in class will be listed here as the course progr
 {% if p.link != None %}
 {% assign dir = p.link %}
 [{{ p.title }}]({{ p.link }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
-{% else %}
+{% elsif p.PDF != None %}
 [{{ p.title }}]({{ dir }}{{ p.PDF }}) by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
+{% else %}
+{{p.title}} by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
 {% endif %}
 {% endfor %}
 {% endfor %}
