Made small edits to the policies page regarding submissions.

--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -35,7 +35,7 @@ Homework will be assigned on Thursdays will be due the following Thursday at the
 
 To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
 
-  * **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#_prob#.ipynb`** for
+  * **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#.ipynb`** for
   problems requiring code.
 
 The subject line of your submission email must have the following format:
@@ -45,7 +45,7 @@ The subject line of your submission email must have the following format:
 For example, a submission for the first homework set would be submitted by
 email with the subject line **`[Homework 1] Submission of HW1 for Barbara
 McClintock`**. The attachments would be **`McClintock_Barbara_hw1.pdf`** and
-**`McClintock_Barbara_hw1_prob3.ipynb`**.
+**`McClintock_Barbara_hw1.ipynb`**.
 
 
 
