Made small clarifying change to the policies.

--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -90,11 +90,13 @@ each line of the code is actually doing, you should type it out by hand.
 
 There will be no exams, quizzes, reports, or research proposals. The entirety
 of your grade comes from completing the homework. **Late homework submissions
-will not be accepted without penalty**. For each day a homework assignment is
-late, a 10% deduction will be made from the maximum possible score. For
-example, a homework received five days late will maximally earn 50%. Attendance
-is expected of all students in the class. As a general rule "on time" means
-that you are sitting in the class room five minutes early.
+(submitted after 1:00 pm on the due date) will not be accepted without penalty**. For each day a homework assignment is
+late, a 10% deduction will be made from the maximum possible score, beginning
+immediately after the homework is due. This means that if your homework is
+handed at 2:00 on the day it is due, the maximum possible score is 90%. If a
+homework is received four days late will maximally earn 50%. Attendance is
+expected of all students in the class. As a general rule "on time" means that
+you are sitting in the class room five minutes early.
 
 
 You may use an electronic device (e.g., tablet, laptop) to take notes during class only if you use it for this purpose. We will ask you to turn off your electronic devices or ask you to leave, if their use is off-topic or distracting to others.
