--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -7,12 +7,12 @@ permalink: syllabus
 ---
 
 
-## Schedule
+## Lecture Schedule
 
 | Week | Date | Topic | Homework |
 | -- | -- | -- | -- |
 | 1 | Tuesday, April 4 | How did amphibians get on the islands 200 miles off the coast of West Africa?| |
-| 1 | Thursday, April 6 | Finishing up biogeography of oceanic islands and beginning our discussion of the 2010 Haitian cholera oubreak. | [Homework 1 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf) |
+| 1 | Thursday, April 6 | Finishing up biogeography of oceanic islands and beginning our discussion of the 2010 Haitian cholera outbreak. | [Homework 1 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf) |
 | 2 | Tuesday, April 11 | We conclude our exploration of biogeography and the 2010 Haitian cholera outbreak. | |
 | 2 | Thursday, April 13 | Rapid evolution and a detailed analysis of trophic cascades. | Homework 2 Released, Homework 1 Due |
 | 3 | Tuesday, April 18 | The fossil record, vestigial limbs, and "Biology's greatest idea". | |
@@ -33,3 +33,18 @@ permalink: syllabus
 | 10 | Thursday, June 8| Where biology fits into modern science and engineering. |  Homework 9 Due |
 | 11 | Tuesday, June 13 | No Class | |
 | 11 | Thursday, June 15 | No Class | |
+
+
+## Recitation Schedule
+
+| Week | Topic |
+| :--: | -- |
+| 1 | Introduction to Python and basic DNA sequence analysis |
+| 2 | Order of magnitude estimates of the central dogma and trophic cascades |
+| 3 | Probing deep time using radiometric dating and order-of-magnitude estimates about mutations over time. |
+| 4 | Writing stochastic simulations in Python and influence of genetic drift.|
+| 5 | Principles and mechanism of photosynthesis |
+| 6 | Introduction to quantitative image processing using Python. |
+| 7 | Performing non-linear regression. |
+| 8 | To be determined. |
+| 9 | To be determined. |
