--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -30,8 +30,27 @@ recitation.
 **Recitations \|** Monday, Tuesday, Thursday; 7:00pm - 7:55pm & 8:00 - 8:55pm in Broad 200<br/>
 **<span style="color: #fafbfc;">Recitations</span> \|** Fridays, 1:00-1:55 pm and 2:00 - 2:55pm in BBB 101
 
-**Office Hours \|** Sundays, 3:00pm - 4:00pm and 6:00 - 8:00pm  in Broad 100.<br />
+
+
+## Office Hours
+
+| Day | Time | Location | TAs |
+|--| -- | -- | -- |
+| Sunday | 1:30pm - 2:30pm | Broad 100 | Rachel and Gloria |
+| Sunday | 6:00pm - 7:00pm | Broad 100 | Tal and Janice |
+| Sunday | 7:00pm - 8:00pm | Broad 100 | Sasha and Emily Meany |
+| Monday | 4:00pm - 5:00pm | Broad 100 | Lily and Soichi |
+| Monday | 9:00pm - 10:00pm | Broad 100 | Bill and William |
+| Monday | 10:00pm - 11:00pm | Broad 100 | Muir and Caroline |
+| Tuesday | 9:00pm - 10:00pm | Broad 100 | Suzy and Emily Miaou |
+| Tuesday | 10:00pm - 11:00pm | Broad 100 | Griffin and Anvita |
+| Wednesday | 2:30pm - 3:30pm | Broad 159 | Rob |
+| Wednesday| 7:00pm  - 8:00pm | Broad 100 | Manuel and Claudia |
+| Wednesday | 9:00pm - 10:00pm | Broad 100 | Andrew, Stephanie, and Jessica|
+
+
+<!-- **Office Hours \|** Sundays, 3:00pm - 4:00pm and 6:00 - 8:00pm  in Broad 100.<br />
 **<span style="color: #fafbfc;">Office Hours</span> \|** Mondays, 4:00pm - 5:00pm and 9:00 - 11:00pm  in Broad 100.<br />
 **<span style="color: #fafbfc;">Office Hours</span> \|** Tuesdays, 9:00pm - 11:00pm in Broad 100.<br />
 **<span style="color: #fafbfc;">Office Hours</span> \|** Wednesdays, 2:30 - 3:30pm in Broad 159 **with Rob**.<br />
-**<span style="color: #fafbfc;">Office Hours</span> \|** Wednesdays, 7:00pm - 9:00pm in Broad 100.<br />
+**<span style="color: #fafbfc;">Office Hours</span> \|** Wednesdays, 7:00pm - 9:00pm in Broad 100.<br /> -->
